--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "next": "latest",
+    "package.json": "^2.0.1",
     "react": "latest",
     "react-dom": "latest",
     "tailwind-merge": "^1.14.0"
