--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "lucide-react": "^0.284.0",
     "next": "latest",
     "package.json": "^2.0.1",
     "react": "latest",
